// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconOpenWith should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-open-with "
  height={16}
  viewBox="0 0 16 16"
  width={16}
>
  <path
    className="fill-color"
    d="M12 2a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 1H4a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zm-1 2v6h-1V6.71l-4.65 4.64-.7-.7L9.29 6H5V5h6z"
    fill="#4e4e4e"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconOpenWith should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-open-with test"
  height={150}
  title="title"
  viewBox="0 0 16 16"
  width={160}
>
  <path
    className="fill-color"
    d="M12 2a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 1H4a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zm-1 2v6h-1V6.71l-4.65 4.64-.7-.7L9.29 6H5V5h6z"
    fill="#222"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;
